FIxed modal on mobile devices

--- a/src/components/BurgerSvg/burgerSvg.scss
+++ b/src/components/BurgerSvg/burgerSvg.scss
@@ -90,4 +90,10 @@ ul {
    width: 100%;
    font-weight: bold;
    color: #333;
+   -webkit-touch-callout: none; 
+   -webkit-user-select: none; 
+   -khtml-user-select: none; 
+   -moz-user-select: none; 
+   -ms-user-select: none; 
+   user-select: none; 
  }
