--- a/src/components/Navigation/SideDrawer/sideDrawer.scss
+++ b/src/components/Navigation/SideDrawer/sideDrawer.scss
@@ -1,4 +1,4 @@
-.sideDrawer {
+.side-drawer {
   position: fixed;
   left: 0;
   top: 0;
@@ -22,7 +22,7 @@
   }
   & nav {
     width: 100%;
-    & .navigationItems {
+    & .navigation-items {
       width: 80%;
       margin: 0 auto;
       display: flex;
@@ -37,13 +37,13 @@
 }
 
 @media (min-width: 500px) {
-  .sideDrawer {
+  .side-drawer {
     display: none;
   }
 }
 
 @media (max-width: 800px) and (orientation: landscape) {
-   .sideDrawer {
+   .side-drawer {
      display: block;
    }
 }
